# whatsmeow-nchat

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
whatsmeow-nchat/: Cargo.toml
whatsmeow-nchat-sys/: Cargo.toml  build.rs  cross_compile.rs
whatsmeow-nchat-sys/examples/: hello.rs
whatsmeow-nchat-sys/go/: .gitignore  Makefile  bindings_cached.rs  cgowm.go  go.mod  gowm.go
whatsmeow-nchat-sys/src/: events.rs  handlers.rs  lib.rs  types.rs
whatsmeow-nchat/src/: error.rs  lib.rs
whatsmeow-sys/: Cargo.toml
whatsmeow-sys/examples/: hello.rs
whatsmeow-sys/go/: .gitignore
whatsmeow-sys/src/: handlers.rs  lib.rs
