[package]
name = "whatsmeow-nchat-sys"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = { version = "2", features = ["std"] }
libc = "0.2"
tokio = { version = "1", features = ["sync"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json.workspace = true

[build-dependencies]
bindgen = "0.72"
